correcting page height on small screens

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,5 +1,5 @@
 .about-div {
-    height: calc(100vh - var(--nav-height));
+    min-height: calc(100vh - var(--nav-height));
     background-color: antiquewhite;
     padding: 15px;
     font-weight: bold;
