--- a/src/pages/notfound404/NotFound404.css
+++ b/src/pages/notfound404/NotFound404.css
@@ -4,6 +4,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - var(--nav-height));
+    min-height: calc(100vh - var(--nav-height));
     font-size: 2rem;
 }
